--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -92,6 +92,7 @@
             <Button x:Name="Game4Button" Content="Wordle" HorizontalAlignment="Left" Height="30" Margin="206,10,0,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="White" Click="Game4Button_Click"/>
             <Button x:Name="Game5Button" Content="Peggle-like" HorizontalAlignment="Left" Height="30" Margin="251,10,0,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="White" Click="Game5Button_Click"/>
             <Button x:Name="Game6Button" Content="Doom" HorizontalAlignment="Left" Height="30" Margin="315,10,0,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="White" Click="Game6Button_Click"/>
+            <Button x:Name="Game7Button" Content="Minesweeper" HorizontalAlignment="Left" Height="30" Margin="355,10,0,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="White" Click="Game7Button_Click"/>
             <Button x:Name="HideButton" Content="Hide" HorizontalAlignment="Right" Height="30" Margin="0,10,10,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="#FFFF4646" Click="HideButton_Click" Width="39"/>
         </Grid>
     </Grid>
