--- a/SDMultiTool/MainWindow.xaml
+++ b/SDMultiTool/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Name="MainWindow1" x:Class="DTTool.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="SDMultiTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DTTool" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+        xmlns:local="clr-namespace:SDMultiTool" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
-        Title="HelpDeskTool" Height="750" Width="950">
+        Title="SDMultiTool" Height="750" Width="950">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="#FFE6E62B" Offset="0"/>
